manifests/infra/argo-workflows.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argo
