manifests/infra/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: us-central1-docker.pkg.dev/mlaas-lite/mlaas-repo/backend:v1
        volumeMounts:
        - name: google-creds
          mountPath: /var/secrets/google
          readOnly: true
      volumes:
      - name: google-creds
        secret:
          secretName: gcp-sa-creds
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: default
spec:
  type: LoadBalancer  # <--- This gives you a Real IP
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 8000
