manifests/infra/postgres.yaml

apiVersion: apps/v1
kind: Deployment
metadata: 
  name: postgres 
  namespace: default
spec: 
  selector:
    matchLabels:
      app: postgres
    replicas: 1
    template:
      metadata:
        labels:
          app: postgres
      spec:
        containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
          - containerPort: 5432
          volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: pgdata
        volumes:
        - name: pgdata
          emptyDir: {} # Ephemeral storage for Development. Use PersistentVolumeClaim in production.

---

apiVersion: v1
kind: Service
metadata: 
  name: postgres
  namespace: default
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
